--- a/005_essentials-tags/01_paragraph-element/index.html
+++ b/005_essentials-tags/01_paragraph-element/index.html
@@ -7,7 +7,5 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-  <body>
-    <p>salam</p>
-  </body>
+  <body></body>
 </html>
