--- a/005_essentials-tags/02_heading-elements/index.html
+++ b/005_essentials-tags/02_heading-elements/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-      necessitatibus sapiente amet soluta illo labore, laborum odit voluptatum
-      ad quo sint dignissimos fugiat, itaque eaque nam dolore exercitationem,
-      porro maxime!
-    </p>
+    <!-- h1+h2+h3+h4+h5+h6 || h$*6 || h${header$}*6 -->
+    <h1>header 1</h1>
+    <h2>header 2</h2>
+    <h3>header 3</h3>
+    <h4>header 4</h4>
+    <h5>header 5</h5>
+    <h6>header 6</h6>
   </body>
 </html>
