--- a/005_essentials-tags/03_unordered- and-ordered-list-elements/index.html
+++ b/005_essentials-tags/03_unordered- and-ordered-list-elements/index.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-      necessitatibus sapiente amet soluta illo labore, laborum odit voluptatum
-      ad quo sint dignissimos fugiat, itaque eaque nam dolore exercitationem,
-      porro maxime!
-    </p>
+    <!-- ol>li{ordered list $}*3 -->
+    <ol>
+      <li>ordered list 1</li>
+      <li>ordered list 2</li>
+      <li>ordered list 3</li>
+    </ol>
+
+    <!-- ul>li{unordered list $}*3 -->
+    <ul>
+      <li>unordered list 1</li>
+      <li>unordered list 2</li>
+      <li>unordered list 3</li>
+    </ul>
   </body>
 </html>
