--- a/019_css-selectors/01_element/index.html
+++ b/019_css-selectors/01_element/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <header></header>
 
-<header></header>
+    <section>
+      <article>
+        <p contenteditable="true">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+          soluta nulla distinctio cum, exercitationem eveniet! Ex, neque dolorum
+          pariatur aspernatur, saepe unde eligendi numquam culpa, velit beatae
+          ipsa facere ratione.
+        </p>
+      </article>
+    </section>
 
-<section>
-    <article></article>
-</section>
+    <aside></aside>
 
-<aside></aside>
-
-<footer></footer>
-
-</body>
+    <footer></footer>
+  </body>
 </html>
