--- a/019_css-selectors/05_pseudo-class/05_focus/01_link/index.html
+++ b/019_css-selectors/05_pseudo-class/05_focus/01_link/index.html
@@ -1,13 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-
-<a href="http://www.walk.com">walk</a>
-
-</body>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <a href="http://www.walk.com">walk</a>
+    <!-- <div class="form-style">
+      <div>
+        <label for="fname">First name:
+        <input type="text" id="fname" />
+        </label>
+      </div>
+      <div>
+        <label for="lname">Last name:
+            <input type="text" id="lname" />
+        </label>
+      </div>
+      <div>
+        <input type="submit" id="fname" />
+      </div> 
+    </div>-->
+    <div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni non
+        itaque pariatur, culpa libero asperiores enim iste minima! Eveniet
+        perspiciatis totam ea quis harum suscipit vel cupiditate cumque voluptas
+        minus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Suscipit voluptatum nisi modi vero architecto vel iure, inventore
+        tenetur corporis, quam aliquam dicta libero rem a minus illo fugit,
+        repudiandae tempora. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Explicabo nam excepturi accusamus libero repudiandae ducimus non
+        dolor atque architecto aperiam! Sint aut placeat mollitia facere vitae
+        aperiam fugit tempore corrupti.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni non
+        itaque pariatur, culpa libero asperiores enim iste minima! Eveniet
+        perspiciatis totam ea quis harum suscipit vel cupiditate cumque voluptas
+        minus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Suscipit voluptatum nisi modi vero architecto vel iure, inventore
+        tenetur corporis, quam aliquam dicta libero rem a minus illo fugit,
+        repudiandae tempora. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Explicabo nam excepturi accusamus libero repudiandae ducimus non
+        dolor atque architecto aperiam! Sint aut placeat mollitia facere vitae
+        aperiam fugit tempore corrupti.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni non
+        itaque pariatur, culpa libero asperiores enim iste minima! Eveniet
+        perspiciatis totam ea quis harum suscipit vel cupiditate cumque voluptas
+        minus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Suscipit voluptatum nisi modi vero architecto vel iure, inventore
+        tenetur corporis, quam aliquam dicta libero rem a minus illo fugit,
+        repudiandae tempora. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Explicabo nam excepturi accusamus libero repudiandae ducimus non
+        dolor atque architecto aperiam! Sint aut placeat mollitia facere vitae
+        aperiam fugit tempore corrupti.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni non
+        itaque pariatur, culpa libero asperiores enim iste minima! Eveniet
+        perspiciatis totam ea quis harum suscipit vel cupiditate cumque voluptas
+        minus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Suscipit voluptatum nisi modi vero architecto vel iure, inventore
+        tenetur corporis, quam aliquam dicta libero rem a minus illo fugit,
+        repudiandae tempora. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Explicabo nam excepturi accusamus libero repudiandae ducimus non
+        dolor atque architecto aperiam! Sint aut placeat mollitia facere vitae
+        aperiam fugit tempore corrupti.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni non
+        itaque pariatur, culpa libero asperiores enim iste minima! Eveniet
+        perspiciatis totam ea quis harum suscipit vel cupiditate cumque voluptas
+        minus. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Suscipit voluptatum nisi modi vero architecto vel iure, inventore
+        tenetur corporis, quam aliquam dicta libero rem a minus illo fugit,
+        repudiandae tempora. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Explicabo nam excepturi accusamus libero repudiandae ducimus non
+        dolor atque architecto aperiam! Sint aut placeat mollitia facere vitae
+        aperiam fugit tempore corrupti.
+      </p>
+    </div>
+  </body>
 </html>
