--- a/031_flexbox/03_hands-on-exercises/02_solutions/02_six-pages/04_flex-basis/index.html
+++ b/031_flexbox/03_hands-on-exercises/02_solutions/02_six-pages/04_flex-basis/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="main.css">
+  <head lang="en">
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="main.css" />
+    <!-- <link rel="stylesheet" href="mq_800-plus.css" media="(min-width:800px)" /> -->
+    <link rel="stylesheet" href="print.css" media="print" />
     <title></title>
-</head>
-<body>
+  </head>
+  <body>
     <div>one</div>
     <div>two</div>
     <div>three</div>
-</body>
+  </body>
 </html>
