045_full-page-background-02

--- a/045_full-page-background_02/000/index.html
+++ b/045_full-page-background_02/000/index.html
@@ -5,6 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Full Page Background Image</title>
+    <!-- favicon -->
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../../046_favicon/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../../046_favicon/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../../046_favicon/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../../046_favicon/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="../../046_favicon/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#2b5797" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- favicon -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
