--- a/048_transitions-animations/02_animation/06_challenge/02_solution/index.html
+++ b/048_transitions-animations/02_animation/06_challenge/02_solution/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-
-<p>What's Up?</p>
-
-</body>
+    <link rel="stylesheet" href="main2.css" />
+  </head>
+  <body>
+    <p>What's Up?</p>
+  </body>
 </html>
